Updated the links

--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
         <main class="main-content">
             <!-- Primary Actions -->
             <section class="button-section">
-                <a href="https://sayosaudi.com" target="_blank" rel="noopener noreferrer" class="button button-primary">
+                <a href="https://sayosaudi.com/menu" target="_blank" rel="noopener noreferrer" class="button button-primary">
                     View Menu
                 </a>
                 <a href="https://sayosaudi.com/contact" target="_blank" rel="noopener noreferrer" class="button button-primary">
                     Contact Us
                 </a>
-                <a href="#" class="button button-primary">
+                <a href="https://maps.app.goo.gl/1SnvLSN3PqY8g3Jo9"  target="_blank" class="button button-primary">
                     Find Us on Google Maps
                 </a>
             </section>
 
             <!-- Social Links -->
             <section class="button-section">
-                <a href="#" class="button button-social">
+                <a href="https://www.instagram.com/sayo.saudi/" target="_blank" rel="noopener noreferrer" class="button button-social">
                     Instagram
                 </a>
                 <a href="#" class="button button-social">
                     Facebook
                 </a>
-                <a href="#" class="button button-social">
-                    TikTok
+                <a href="https://www.youtube.com/@Sayosaudi" target="_blank" rel="noopener noreferrer" class="button button-social">
+                    YouTube
                 </a>
             </section>
 
