Updates links to reflect website changes
Updates menu and contact links to include ".html" extension.
Also, updates the Facebook link to point to the company's page.
Removes unused secondary link and moves whatsapp button to the same section.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <main class="main-content">
             <!-- Primary Actions -->
             <section class="button-section">
-                <a href="https://sayosaudi.com/menu" target="_blank" rel="noopener noreferrer" class="button button-primary">
+                <a href="https://sayosaudi.com/menu.html" target="_blank" rel="noopener noreferrer" class="button button-primary">
                     View Menu
                 </a>
-                <a href="https://sayosaudi.com/contact" target="_blank" rel="noopener noreferrer" class="button button-primary">
+                <a href="https://sayosaudi.com/contact.html" target="_blank" rel="noopener noreferrer" class="button button-primary">
                     Contact Us
                 </a>
                 <a href="https://maps.app.goo.gl/1SnvLSN3PqY8g3Jo9"  target="_blank" class="button button-primary">
@@ -40,7 +40,7 @@
                 <a href="https://www.instagram.com/sayo.saudi/" target="_blank" rel="noopener noreferrer" class="button button-social">
                     Instagram
                 </a>
-                <a href="#" class="button button-social">
+                <a href="https://www.facebook.com/people/Sayo-Pan-Asian-Restaurant/61585732807142/?mibextid=wwXIfr&rdid=LrFw6WgGUKeSVIVC&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1APVZeY9vj%2F%3Fmibextid%3DwwXIfr" class="button button-social">
                     Facebook
                 </a>
                 <a href="https://www.youtube.com/@Sayosaudi" target="_blank" rel="noopener noreferrer" class="button button-social">
@@ -49,11 +49,11 @@
             </section>
 
             <!-- Secondary Links -->
-            <section class="button-section">
+            <!-- <section class="button-section">
                 <a href="#" class="button button-secondary">
                     Google Reviews
-                </a>
-                <a href="#" class="button button-secondary">
+                </a> -->
+                <a href="https://wa.me/966550185656" target="_blank" rel="noopener noreferrer" class="button button-secondary">
                     WhatsApp
                 </a>
             </section>
