feat: Enable Google Reviews section and update secondary contact links

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             </section>
 
             <!-- Secondary Links -->
-            <!-- <section class="button-section">
-                <a href="#" class="button button-secondary">
+            <section class="button-section">
+                <a href="https://g.page/r/CQvbbpElcLkEEBI/review" class="button button-secondary">
                     Google Reviews
-                </a> -->
-                <a href="https://wa.me/966550185656" target="_blank" rel="noopener noreferrer" class="button button-secondary">
+                </a>
+                <a href="https://wa.me/0550185656" target="_blank" rel="noopener noreferrer" class="button button-secondary">
                     WhatsApp
                 </a>
             </section>
