feat: Update 'View Menu' link to new platform

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main class="main-content">
             <!-- Primary Actions -->
             <section class="button-section">
-                <a href="https://sayosaudi.com/menu.html" target="_blank" rel="noopener noreferrer" class="button button-primary">
+                <a href="https://dinepos.net/restaurant/sayo-pan-asian-restaurant" target="_blank" rel="noopener noreferrer" class="button button-primary">
                     View Menu
                 </a>
                 <a href="https://sayosaudi.com/contact.html" target="_blank" rel="noopener noreferrer" class="button button-primary">
